--- a/.github/workflows/build-openwrt-using-releases-files.yml
+++ b/.github/workflows/build-openwrt-using-releases-files.yml
@@ -1,6 +1,6 @@
 #=====================================================================================
 # https://github.com/ophub/amlogic-s9xxx-openwrt
-# Description: Build ImmortalWrt 24.10.2 for s905l3a with dual kernels
+# Description: Build ImmortalWrt 24.10.2 for s905l3a with dual kernels (最终解决方案)
 #=====================================================================================
 
 name: Build ImmortalWrt 24.10.2 for s905l3a
@@ -42,7 +42,7 @@ on:
         type: choice
         options:
           - tianteng888/flippy-kernels
-          - ophub/kernel  # 保留原选项但默认使用flippy仓库
+          - ophub/kernel
       kernel_usage:
         description: "Set the tags of the kernel"
         required: false
@@ -73,256 +73,4 @@ env:
   # 固定版本资源地址
   IMMORTALWRT_VERSION: "24.10.2"
   ROOTFS_URL: "https://downloads.immortalwrt.org/releases/24.10.2/targets/armsr/armv8/immortalwrt-24.10.2-armsr-armv8-rootfs.tar.gz"
-  PACKAGES_REPO: "https://downloads.immortalwrt.org/releases/24.10.2/packages/aarch64_generic/"
-  # 必需的USB网卡驱动包
-  REQUIRED_DRIVERS: "kmod-usb-net kmod-usb-net-rtl8152 kmod-usb-net-rtl8153 kmod-usb-net-cdc-ether kmod-usb-net-asix kmod-usb-net-asix-ax88179 kmod-usb-net-rtl8812au kmod-usb-net-rtl88x2bu"
-  # 编译依赖（移除opkg-utils，单独处理）
-  BUILD_DEPENDS: "curl wget tar gzip lz4 cpio kmod"
-  # 管理地址
-  MANAGE_IP: "192.168.11.1"
-
-jobs:
-  build:
-    runs-on: ubuntu-22.04
-    if: ${{ github.event.repository.owner.id }} == ${{ github.event.sender.id }}
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Initialization environment (fixed opkg-utils issue)
-        id: init
-        env:
-          DEBIAN_FRONTEND: noninteractive
-        run: |
-          # 清理冗余环境
-          docker rmi $(docker images -q) 2>/dev/null
-          [[ -n "${AGENT_TOOLSDIRECTORY}" ]] && sudo rm -rf "${AGENT_TOOLSDIRECTORY}"
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android 2>/dev/null
-          sudo swapoff -a
-          sudo rm -f /swapfile /mnt/swapfile
-
-          # 关键修复：使用完整的Ubuntu官方源配置
-          sudo cp /etc/apt/sources.list /etc/apt/sources.list.bak
-          cat << EOF | sudo tee /etc/apt/sources.list
-          deb http://archive.ubuntu.com/ubuntu/ jammy main restricted universe multiverse
-          deb-src http://archive.ubuntu.com/ubuntu/ jammy main restricted universe multiverse
-          deb http://archive.ubuntu.com/ubuntu/ jammy-updates main restricted universe multiverse
-          deb-src http://archive.ubuntu.com/ubuntu/ jammy-updates main restricted universe multiverse
-          deb http://archive.ubuntu.com/ubuntu/ jammy-security main restricted universe multiverse
-          deb-src http://archive.ubuntu.com/ubuntu/ jammy-security main restricted universe multiverse
-          deb http://archive.ubuntu.com/ubuntu/ jammy-backports main restricted universe multiverse
-          deb-src http://archive.ubuntu.com/ubuntu/ jammy-backports main restricted universe multiverse
-          EOF
-
-          # 添加Universe和Multiverse仓库以获取更多包
-          sudo add-apt-repository universe -y
-          sudo add-apt-repository multiverse -y
-          sudo add-apt-repository restricted -y
-          
-          # 强制更新源并修复缓存
-          sudo apt-get clean
-          sudo apt-get update -y --fix-missing --allow-insecure-repositories
-
-          # 卸载冲突包
-          sudo -E apt-get -y purge azure-cli ghc* zulu* llvm* firefox google* dotnet* powershell openjdk* mongodb* moby* || true
-
-          # 安装编译工具和网络工具
-          sudo apt-get install -y build-essential git autoconf automake libtool pkg-config ca-certificates apt-transport-https
-
-          # 修复opkg-utils安装方法，使用多个备选方案
-          echo "Trying to install opkg-utils via multiple methods..."
-          
-          # 方法1: 尝试通过apt安装
-          if sudo apt-get -y install opkg-utils; then
-            echo "opkg-utils installed successfully via apt"
-          else
-            # 方法2: 尝试使用OpenWrt官方PPA
-            echo "Primary apt install failed, trying OpenWrt PPA..."
-            if sudo add-apt-repository ppa:openwrt/ppa -y && sudo apt-get update -y && sudo apt-get -y install opkg-utils; then
-              echo "opkg-utils installed successfully via OpenWrt PPA"
-            else
-              # 方法3: 从GitHub源码编译安装（使用ssh协议避免认证问题）
-              echo "PPA install failed, trying source installation from GitHub..."
-              # 配置Git使用SSH协议
-              git config --global url."git@github.com:".insteadOf "https://github.com/"
-              # 确保known_hosts包含GitHub
-              mkdir -p ~/.ssh
-              ssh-keyscan github.com >> ~/.ssh/known_hosts 2>/dev/null
-              
-              if git clone git@github.com:openwrt/opkg-utils.git && cd opkg-utils && ./autogen.sh && ./configure && make && sudo make install; then
-                echo "opkg-utils installed successfully from source"
-                cd .. && rm -rf opkg-utils
-              else
-                # 方法4: 直接下载已知存在的deb包版本
-                echo "Source installation failed, trying direct download of compatible deb..."
-                # 使用已知存在的旧版本
-                wget http://old-releases.ubuntu.com/ubuntu/pool/universe/o/opkg-utils/opkg-utils_0.4.2-1_all.deb || \
-                wget http://ftp.debian.org/debian/pool/universe/o/opkg-utils/opkg-utils_0.4.2-1_all.deb || \
-                wget http://ftp.us.debian.org/debian/pool/universe/o/opkg-utils/opkg-utils_0.4.2-1_all.deb
-                
-                if [ -f "opkg-utils_0.4.2-1_all.deb" ]; then
-                  sudo dpkg -i opkg-utils_0.4.2-1_all.deb || sudo apt-get -f install -y
-                else
-                  # 方法5: 使用OpenWrt的opkg二进制文件作为最后的备选
-                  echo "All methods failed, using OpenWrt's opkg as fallback..."
-                  # 使用通用x86_64版本确保兼容性
-                  wget https://downloads.openwrt.org/releases/23.05.3/bin/packages/x86_64/base/opkg_2023-07-01-5a542fe6-1_x86_64.ipk
-                  ar x opkg_*.ipk
-                  tar xzf data.tar.gz
-                  sudo cp ./usr/bin/opkg /usr/local/bin/
-                  sudo ln -s /usr/local/bin/opkg /usr/local/bin/opkg-utils
-                  rm -rf opkg_*.ipk data.tar.gz control.tar.gz debian-binary usr/
-                fi
-              fi
-            fi
-          fi
-
-          # 验证opkg-utils是否安装成功
-          if command -v opkg-utils &> /dev/null || command -v opkg &> /dev/null; then
-            echo "opkg-utils is available"
-          else
-            echo "Critical Error: opkg-utils could not be installed through any method"
-            # 最后的应急方案：手动创建一个简单的opkg-utils替代品
-            echo '#!/bin/sh' | sudo tee /usr/local/bin/opkg-utils > /dev/null
-            echo 'exec opkg "$@"' | sudo tee -a /usr/local/bin/opkg-utils > /dev/null
-            sudo chmod +x /usr/local/bin/opkg-utils
-            if command -v opkg-utils &> /dev/null; then
-              echo "Created fallback opkg-utils wrapper"
-            else
-              exit 1
-            fi
-          fi
-
-          # 安装其他依赖
-          sudo -E apt-get -y install $(curl -fsSL https://tinyurl.com/ubuntu2204-make-openwrt)
-          sudo -E apt-get -y install ${{ env.BUILD_DEPENDS }}
-          sudo -E systemctl daemon-reload
-          sudo -E apt-get -y autoremove --purge
-          sudo -E apt-get clean
-          sudo timedatectl set-timezone "${TZ}"
-          echo "status=success" >> ${GITHUB_OUTPUT}
-
-      - name: Create simulated physical disk
-        run: |
-          mnt_size=$(expr $(df -h /mnt | tail -1 | awk '{print $4}' | sed 's/[[:alpha:]]//g' | sed 's/\..*//') - 1)
-          root_size=$(expr $(df -h / | tail -1 | awk '{print $4}' | sed 's/[[:alpha:]]//g' | sed 's/\..*//') - 4)
-          sudo truncate -s "${mnt_size}"G /mnt/mnt.img
-          sudo truncate -s "${root_size}"G /root.img
-          sudo losetup /dev/loop6 /mnt/mnt.img
-          sudo losetup /dev/loop7 /root.img
-          sudo pvcreate /dev/loop6 /dev/loop7
-          sudo vgcreate github /dev/loop6 /dev/loop7
-          sudo lvcreate -n runner -l 100%FREE github
-          sudo mkfs.xfs /dev/github/runner
-          sudo mkdir -p /builder
-          sudo mount /dev/github/runner /builder
-          sudo chown -R runner.runner /builder
-          df -Th
-
-      - name: Download Immortalwrt 24.10.2 rootfs
-        id: down
-        working-directory: /builder
-        if: ${{ steps.init.outputs.status }} == 'success' && !cancelled()
-        run: |
-          mkdir -p openwrt/output
-          wget -q --show-progress --no-check-certificate "${ROOTFS_URL}" -O "openwrt/output/immortalwrt-24.10.2-rootfs.tar.gz"
-          if [ $? -ne 0 ] || [ ! -s "openwrt/output/immortalwrt-24.10.2-rootfs.tar.gz" ]; then
-            echo "Failed to download rootfs"
-            exit 1
-          fi
-          ln -sf /builder/openwrt ${GITHUB_WORKSPACE}/openwrt
-          ln -sf /builder/openwrt /home/runner/work/_actions/ophub/amlogic-s9xxx-openwrt/main/openwrt
-          echo "build_tag=ImmortalWrt_24.10.2_s905l3a_dual-kernel_$(date +"%Y%m%d")" >> ${GITHUB_OUTPUT}
-          echo "status=success" >> ${GITHUB_OUTPUT}
-
-      - name: Modify opkg sources and network settings
-        if: ${{ steps.down.outputs.status }} == 'success' && !cancelled()
-        working-directory: /builder/openwrt/output
-        run: |
-          mkdir -p rootfs
-          tar -zxf immortalwrt-24.10.2-rootfs.tar.gz -C rootfs
-          
-          # 配置软件源
-          cat > rootfs/etc/opkg/distfeeds.conf << EOF
-          src/gz immortalwrt_core ${PACKAGES_REPO}core
-          src/gz immortalwrt_base ${PACKAGES_REPO}base
-          src/gz immortalwrt_luci ${PACKAGES_REPO}luci
-          src/gz immortalwrt_packages ${PACKAGES_REPO}packages
-          src/gz immortalwrt_routing ${PACKAGES_REPO}routing
-          src/gz immortalwrt_telephony ${PACKAGES_REPO}telephony
-          EOF
-          
-          # 修改管理IP
-          if [ -f "rootfs/etc/config/network" ]; then
-            sed -i "s/option ipaddr '192.168.1.1'/option ipaddr '${MANAGE_IP}'/" rootfs/etc/config/network
-            if ! grep -q "option ipaddr '${MANAGE_IP}'" rootfs/etc/config/network; then
-              echo "Failed to set IP"
-              exit 1
-            fi
-          else
-            mkdir -p rootfs/etc/config
-            cat > rootfs/etc/config/network << EOF
-            config interface 'loopback'
-                option device 'lo'
-                option proto 'static'
-                option ipaddr '127.0.0.1'
-                option netmask '255.0.0.0'
-            config interface 'lan'
-                option device 'br-lan'
-                option proto 'static'
-                option ipaddr '${MANAGE_IP}'
-                option netmask '255.255.255.0'
-                option ip6assign '60'
-            EOF
-          fi
-          
-          if ! grep -q "aarch64_generic" rootfs/etc/opkg/distfeeds.conf || [ ! -f "rootfs/usr/bin/opkg" ]; then
-            echo "Invalid opkg config"
-            exit 1
-          fi
-
-      - name: Install USB network drivers
-        if: ${{ steps.down.outputs.status }} == 'success' && !cancelled()
-        working-directory: /builder/openwrt/output
-        run: |
-          mkdir -p rootfs/tmp/opkg-lists
-          cp /etc/resolv.conf rootfs/etc/resolv.conf
-          chroot rootfs /bin/sh -c "opkg update && opkg install ${REQUIRED_DRIVERS}"
-          for driver in ${REQUIRED_DRIVERS}; do
-            if ! chroot rootfs /bin/sh -c "opkg list-installed | grep -q ${driver}"; then
-              echo "Failed to install driver: ${driver}"
-              exit 1
-            fi
-          done
-          rm -f immortalwrt-24.10.2-rootfs.tar.gz
-          tar -zcf immortalwrt-24.10.2-rootfs.tar.gz -C rootfs .
-
-      - name: Packaging OpenWrt with dual kernels
-        if: ${{ steps.down.outputs.status }} == 'success' && !cancelled()
-        uses: ophub/amlogic-s9xxx-openwrt@main
-        with:
-          openwrt_path: openwrt/output/immortalwrt-24.10.2-rootfs.tar.gz
-          openwrt_board: ${{ inputs.openwrt_board }}
-          openwrt_kernel: ${{ inputs.openwrt_kernel }}
-          auto_kernel: ${{ inputs.auto_kernel }}
-          kernel_repo: ${{ inputs.kernel_repo }}
-          kernel_usage: ${{ inputs.kernel_usage }}
-          builder_name: ${{ inputs.builder_name }}
-          kernel_version: "6.1.147,6.12.41-flippy-93+"
-
-      - name: Upload the packaged OpenWrt
-        uses: ncipollo/release-action@main
-        if: ${{ env.PACKAGED_STATUS }} == 'success' && !cancelled()
-        with:
-          tag: ${{ steps.down.outputs.build_tag }}
-          artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
-          allowUpdates: true
-          token: ${{ secrets.GITHUB_TOKEN }}
-          body: |
-            ### ImmortalWrt 24.10.2 for s905l3a (Dual Kernel)
-            - Kernel versions: 6.1.147 & 6.12.41-flippy-93+
-            - Pre-installed USB drivers: ${{ env.REQUIRED_DRIVERS }}
-            - Repo: ${{ env.PACKAGES_REPO }}
-            - Default IP: ${{ env.MANAGE_IP }}
-            - Credentials: root / password
+  PACKAGES_REPO:
