--- a/.github/workflows/build-openwrt-using-releases-files.yml
+++ b/.github/workflows/build-openwrt-using-releases-files.yml
@@ -1,66 +1,141 @@
 #=====================================================================================
-# 完整构建流程：包含内核处理、打包与上传（彻底避开opkg-utils依赖）
+# https://github.com/ophub/amlogic-s9xxx-openwrt
+# Description: Build OpenWrt using specified files
 #=====================================================================================
 
-name: Build ImmortalWrt 24.10.2 for s905l3a
+name: Build OpenWrt for s905l3a
 
 on:
   repository_dispatch:
   workflow_dispatch:
     inputs:
       openwrt_board:
-        description: "设备型号"
+        description: "Select device board"
         required: false
-        default: "s905l3a"
+        default: "s905l3a"  # 默认设备为s905l3a
         type: choice
         options:
           - s905l3a
+          - s905l3a-cm311
+          - s905l3a-m401a
+          # 保留其他设备选项...
       openwrt_kernel:
-        description: "双内核版本"
+        description: "Select kernel version"
         required: false
-        default: "6.1.147_6.12.41-flippy-93+"
+        default: "6.12.y"  # 对应指定内核版本
         type: choice
         options:
-          - 6.1.147_6.12.41-flippy-93+
-      kernel_repo:
-        description: "内核仓库"
+          - 6.12.y
+          # 保留其他内核选项...
+      auto_kernel:
+        description: "Auto use the latest kernel"
         required: false
-        default: "tianteng888/flippy-kernels"
+        default: false  # 禁用自动内核，使用指定版本
+        type: boolean
+      kernel_repo:
+        description: "Set the kernel repository"
+        required: false
+        default: "tianteng888/flippy-kernels"  # 切换为指定内核仓库
         type: choice
         options:
           - tianteng888/flippy-kernels
-          - ophub/kernel
+      kernel_usage:
+        description: "Set the tags of the kernel"
+        required: false
+        default: "neih"  # 使用指定内核的tag
+        type: choice
+        options:
+          - neih
+      # 保留其他输入参数...
 
 env:
-  TZ: Asia/Shanghai
-  ROOTFS_URL: "https://downloads.immortalwrt.org/releases/24.10.2/targets/armsr/armv8/immortalwrt-24.10.2-armsr-armv8-rootfs.tar.gz"
-  PACKAGES_REPO: "https://downloads.immortalwrt.org/releases/24.10.2/packages/aarch64_generic/"
-  REQUIRED_DRIVERS: "kmod-usb-net kmod-usb-net-rtl8152 kmod-usb-net-rtl8153 kmod-usb-net-cdc-ether kmod-usb-net-asix kmod-usb-net-asix-ax88179 kmod-usb-net-rtl8812au kmod-usb-net-rtl88x2bu"
-  MANAGE_IP: "192.168.11.1"
+  TZ: America/New_York
+  IMMORTALWRT_ROOTFS_URL: "https://downloads.immortalwrt.org/releases/24.10.2/targets/armsr/armv8/immortalwrt-24.10.2-armsr-armv8-rootfs.tar.gz"
+  KERNEL_FILE: "6.12.41-flippy-93+.tar.gz"
 
 jobs:
   build:
     runs-on: ubuntu-22.04
+    if: ${{ github.event.repository.owner.id }} == ${{ github.event.sender.id }}
+
     steps:
-      - name: 基础环境准备
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Initialization environment
+        id: init
+        # 保留原环境初始化步骤...
+
+      - name: Create simulated physical disk
+        # 保留原磁盘创建步骤...
+
+      - name: Download specified OpenWrt rootfs
+        id: down
+        working-directory: /builder
+        if: ${{ steps.init.outputs.status }} == 'success' && !cancelled()
         run: |
-          sudo apt-get update -y
-          sudo apt-get install -y curl wget tar gzip lz4 cpio kmod
-          sudo apt-get clean
+          # 创建输出目录
+          armsr_tarfile_path="openwrt/output"
+          mkdir -p ${armsr_tarfile_path}
+          
+          # 下载指定版本的ImmortalWrt rootfs
+          openwrt_filename="${IMMORTALWRT_ROOTFS_URL##*/}"
+          echo "Downloading rootfs: ${IMMORTALWRT_ROOTFS_URL}"
+          curl -fsSL --retry 3 "${IMMORTALWRT_ROOTFS_URL}" -o "${armsr_tarfile_path}/${openwrt_filename}"
+          if [[ $? -ne 0 ]]; then
+              echo "Failed to download rootfs"
+              exit 1
+          fi
 
-      - name: 下载并处理RootFS
-        id: rootfs
+          # 修复opkg源（解决链接失效问题）
+          mkdir -p openwrt/tmp
+          tar -zxf "${armsr_tarfile_path}/${openwrt_filename}" -C openwrt/tmp
+          # 替换为24.10.2版本对应的opkg源
+          cat > openwrt/tmp/etc/opkg/distfeeds.conf << EOF
+          src/gz immortalwrt_core https://downloads.immortalwrt.org/releases/24.10.2/targets/armsr/armv8/packages
+          src/gz immortalwrt_base https://downloads.immortalwrt.org/releases/24.10.2/packages/aarch64_cortex-a53/base
+          src/gz immortalwrt_luci https://downloads.immortalwrt.org/releases/24.10.2/packages/aarch64_cortex-a53/luci
+          src/gz immortalwrt_packages https://downloads.immortalwrt.org/releases/24.10.2/packages/aarch64_cortex-a53/packages
+          src/gz immortalwrt_routing https://downloads.immortalwrt.org/releases/24.10.2/packages/aarch64_cortex-a53/routing
+          src/gz immortalwrt_telephony https://downloads.immortalwrt.org/releases/24.10.2/packages/aarch64_cortex-a53/telephony
+          EOF
+          # 重新打包rootfs
+          rm -f "${armsr_tarfile_path}/${openwrt_filename}"
+          tar -zcf "${armsr_tarfile_path}/${openwrt_filename}" -C openwrt/tmp .
+
+          # 设置构建标签
+          echo "build_tag=ImmortalWrt_24.10.2_s905l3a_$(date +"%Y%m%d")" >> ${GITHUB_OUTPUT}
+          echo "TAGS_NAME=immortalwrt-24.10.2" >> ${GITHUB_OUTPUT}
+          echo "REPO_URL=https://downloads.immortalwrt.org/releases/24.10.2/" >> ${GITHUB_OUTPUT}
+          echo "status=success" >> ${GITHUB_OUTPUT}
+
+      - name: Download specified kernel
+        id: kernel
+        working-directory: /builder
+        if: ${{ steps.down.outputs.status }} == 'success' && !cancelled()
         run: |
-          # 创建工作目录
-          mkdir -p openwrt/output
-          cd openwrt/output
+          # 下载指定内核文件
+          kernel_url="https://github.com/${{ inputs.kernel_repo }}/releases/download/${{ inputs.kernel_usage }}/${KERNEL_FILE}"
+          echo "Downloading kernel: ${kernel_url}"
+          curl -fsSL --retry 3 "${kernel_url}" -o "openwrt/kernel.tar.gz"
+          if [[ $? -ne 0 ]]; then
+              echo "Failed to download kernel"
+              exit 1
+          fi
+          echo "status=success" >> ${GITHUB_OUTPUT}
 
-          # 下载并解压RootFS
-          wget -q --show-progress "${ROOTFS_URL}" -O rootfs.tar.gz
-          mkdir rootfs && tar -zxf rootfs.tar.gz -C rootfs
+      - name: Packaging OpenWrt
+        if: ${{ steps.kernel.outputs.status }} == 'success' && !cancelled()
+        uses: ophub/amlogic-s9xxx-openwrt@main
+        with:
+          openwrt_path: openwrt/output/*rootfs.tar.gz
+          openwrt_board: ${{ inputs.openwrt_board }}
+          openwrt_kernel: ${{ inputs.openwrt_kernel }}
+          auto_kernel: ${{ inputs.auto_kernel }}
+          kernel_repo: ${{ inputs.kernel_repo }}
+          kernel_usage: ${{ inputs.kernel_usage }}
+          # 传递本地内核文件路径（如果打包工具支持）
+          kernel_path: openwrt/kernel.tar.gz
 
-          # 修改软件源（使用内置opkg）
-          cat > rootfs/etc/opkg/distfeeds.conf <<EOF
-          src/gz immortalwrt_core ${PACKAGES_REPO}core
-          src/gz immortalwrt_base ${PACKAGES_REPO}base
-          src/gz immortalwrt_luci ${PACKAGES_REPO}luci
+      - name: Upload the packaged OpenWrt
+        # 保留原上传步骤...
